// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section component does not render nested section components 1`] = `
<div
  class="Section"
>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    Hello world.
  </div>
</div>
`;

exports[`Section component renders a white section 1`] = `
<div
  class="Section Section--white"
>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    Hello world.
  </div>
</div>
`;

exports[`Section component renders correctly 1`] = `
<div
  class="Section"
>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg"
  >
    Hello world.
  </div>
</div>
`;
